--- a/angular-tour-of-heroes-express/buildspec-s3.yml
+++ b/angular-tour-of-heroes-express/buildspec-s3.yml
@@ -5,6 +5,7 @@ phases:
     runtime-versions:
       nodejs: 10
     commands:
+      - pwd
       - cd ./front
       - npm install -g
       - npm install --save-dev @angular-devkit/build-angular
