s3のビルドファイルを修正

--- a/angular-tour-of-heroes-express/front/buildspec-s3.yml
+++ b/angular-tour-of-heroes-express/front/buildspec-s3.yml
@@ -5,8 +5,7 @@ phases:
     runtime-versions:
       nodejs: 10
     commands:
-      - npm install -g
-      - npm install --save-dev @angular-devkit/build-angular
+      - npm install
       - npm install -g @angular/cli
   build:
     commands:
